# Player-Tracking

./: .gitignore  Bachelor_project  CMakeLists.txt  README.md  callgrind.out.11834  config.cfg  example.sh  gmon.out  output.out  profiling_results  setup.sh
headers/: bgsubstractor.h  blob_player_extractor.h  blob_separator.h  box_t.h  calibration_tool.h  config.h  coordinates_translator.h  debug.h  dpm.h  dpm_calibrator.h  dpm_detector.h  dpm_player_extractor.h  fast_dpm.h  feature_comparator.h  features_extractor.h  features_t.h  frame_t.h  heuristic_feature_extractor.h  log_parser.h  manual_player_extractor.h  multithreaded_pipeline.h  pipeline.h  pipeline_thread.h  pipeline_visualizer.h  player_extractor.h  player_t.h  position_t.h  simple_pipeline.h  team_t.h  training_set_creator.h  write_buffer.h
headers/background_subtractor/: bgsubstractor.h
headers/data_structures/: cmd_args_t.h  features_t.h  frame_t.h  player_t.h  team_t.h
headers/demo/: demo.h
headers/features_comparison/: feature_comparator.h
headers/features_extraction/: dpm.h  features_extractor.h
headers/misc/: config.h
headers/openCV/: _lsvm_matching.h
headers/pipelines/: approximative_pipeline.h  multithreaded_pipeline.h  pipeline.h  pipeline_thread.h  real_time_pipeline.h  simple_pipeline.h
headers/players_extraction/: player_extractor.h
headers/players_extraction/blob_based_extraction/: blob_player_extractor.h  blob_separator.h
headers/players_extraction/dpm_based_extraction/: dpm_detector.h  dpm_player_extractor.h
headers/sdl_binds/: sdl_binds.h
headers/test_cases/: bgsubstractor_tests.h  dpm_detector_tests.h  feature_comparator_tests.h  features_extractor_tests.h  test_suite.h
headers/tools/: calibration_tool.h  dpm_calibrator.h  manual_player_extractor.h  training_set_creator.h
logs/: player_detection.txt
memory/: memcheck_log_2015.12.22_00:56:59.xml  memcheck_log_2015.12.22_02:00:02.xml  memcheck_log_2015.12.22_03:06:56.xml  memory leaks progression  temp_proj_2015.12.22_00:37:06.cfg  temp_proj_2015.12.22_00:56:59.cfg
res/cluster/: cluster.kfc  clusterCenters.txt
res/cluster/uni-hockey/: cluster.kfc4  cluster.kfc5  cluster.kfc6  cluster.kfc7  cluster.kfc8  cluster.kfc9  clusterCenters.txt10  clusterCenters.txt100  clusterCenters.txt1000  clusterCenters.txt1100  clusterCenters.txt20  clusterCenters.txt200  clusterCenters.txt30  clusterCenters.txt300  clusterCenters.txt40  clusterCenters.txt400  clusterCenters.txt50  clusterCenters.txt500  clusterCenters.txt60  clusterCenters.txt600  clusterCenters.txt70  clusterCenters.txt700  clusterCenters.txt80  clusterCenters.txt800  clusterCenters.txt90  clusterCenters.txt900  clusterCenters.txt999
res/debug/: last_player_image_blob_separator.jpg 
res/xmls/: insa.xml
sources/: bgsubstractor.cpp  blob_player_extractor.cpp  blob_separator.cpp  calibration_tool.cpp  config.cpp  coordinates_translator.cpp  debug.cpp  dpm.cpp  dpm_calibrator.cpp  dpm_detector.cpp  dpm_player_extractor.cpp  fast_dpm.cpp  feature_comparator.cpp  features_extractor.cpp  heuristic_feature_extractor.cpp  log_parser.cpp  main.cpp  manual_player_extractor.cpp  multithreaded_pipeline.cpp  pipeline.cpp  pipeline_thread.cpp  pipeline_visualizer.cpp  player_extractor.cpp  simple_pipeline.cpp  training_set_creator.cpp  write_buffer.cpp
sources/background_subtractor/: bgsubstractor.cpp
sources/demo/: demo.cpp
sources/features_comparison/: feature_comparator.cpp
sources/features_extraction/: dpm.cpp  features_extractor.cpp
sources/misc/: config.cpp
sources/pipelines/: approximative_pipeline.cpp  multithreaded_pipeline.cpp  pipeline.cpp  pipeline_thread.cpp  real_time_pipeline.cpp  simple_pipeline.cpp
sources/players_extraction/blob_based_extraction/: blob_player_extractor.cpp  blob_separator.cpp
sources/players_extraction/dpm_based_extraction/: dpm_detector.cpp  dpm_player_extractor.cpp
sources/sdl_binds/: sdl_binds.cpp
sources/test_cases/: bgsubstractor_tests.cpp  dpm_detector_tests.cpp  feature_comprator_tests.cpp  features_extractor_tests.cpp  test_suite.cpp
sources/tools/: calibration_tool.cpp  dpm_calibrator.cpp  manual_player_extractor.cpp  training_set_creator.cpp
test/: expected.out  test.sh  test_config.cfg
tests/: cluster_tests.h  dpm_detector_tests.h  features_extractor_tests.h
